feat(bot): finished admin conf
