# src/GuildSaber.Api/Features/Guilds/Http/Mappers.cs
@@ -129,10 +129,12 @@ public static class GuildMappers
     };
 
     public static Result<GuildDiscordInfo> Map(this GuildResponses.GuildDiscordInfo self)
-        => new GuildDiscordInfo(self.MainDiscordGuildId, self.InviteCode);
+        => new GuildDiscordInfo(self.MainDiscordGuildId, self.InviteCode, self.ConfirmedScoreFeedChannelId,
+            self.RefusedScoreFeedChannelId);
 
     public static GuildResponses.GuildDiscordInfo Map(this GuildDiscordInfo self)
-        => new(self.MainDiscordGuildId, self.DiscordInviteCode);
+        => new(self.MainDiscordGuildId, self.DiscordInviteCode, self.ConfirmedScoreFeedChannelId,
+            self.RefusedScoreFeedChannelId);
 
     public static GuildResponses.EGuildStatus Map(this Guild.EGuildStatus self) => self switch
     {
