# src/GuildSaber.Database/Models/Server/Guilds/GuildDiscordInfo.cs
@@ -4,7 +4,12 @@ using Microsoft.EntityFrameworkCore.Metadata.Builders;
 
 namespace GuildSaber.Database.Models.Server.Guilds;
 
-public readonly record struct GuildDiscordInfo(DiscordGuildId? MainDiscordGuildId, string? DiscordInviteCode);
+public readonly record struct GuildDiscordInfo(
+    DiscordGuildId? MainDiscordGuildId,
+    string? DiscordInviteCode,
+    DiscordChannelId? ConfirmedScoreFeedChannelId,
+    DiscordChannelId? RefusedScoreFeedChannelId
+);
 
 public class GuildDiscordInfoConfiguration : IComplexPropertyConfiguration<GuildDiscordInfo>
 {
@@ -16,6 +21,14 @@ public class GuildDiscordInfoConfiguration : IComplexPropertyConfiguration<Guild
 
         builder.Property(x => x.DiscordInviteCode)
             .HasMaxLength(32);
+
+        builder.Property(x => x.ConfirmedScoreFeedChannelId)
+            .HasConversion<ulong?>(from => from, to => DiscordChannelId.CreateUnsafe(to))
+            .HasColumnType("numeric(20,0)");
+
+        builder.Property(x => x.RefusedScoreFeedChannelId)
+            .HasConversion<ulong?>(from => from, to => DiscordChannelId.CreateUnsafe(to))
+            .HasColumnType("numeric(20,0)");
 
         return builder;
     }
