# src/GuildSaber.Website/openapi/GuildSaber.Api.json
@@ -290,19 +290,19 @@
         },
         "security": [
           {
-            "Bearer": []
+            "Bearer": [ ]
           }
         ]
       }
     },
-    "/contexts/{contextId}/ranked-scores/scores/{scoreId}/set-denied": {
+    "/contexts/{contextId}/ranked-scores/scores/{scoreId}/set-refused": {
       "post": {
         "tags": [
           "Context.RankedScores"
         ],
-        "summary": "Deny all pending-compatible ranked scores from their underlying scoreId",
+        "summary": "Refuse all pending-compatible ranked scores from their underlying scoreId",
         "description": "Set all pending-compatible ranked scores from their underlying scoreId as refused by the scoring team.",
-        "operationId": "SetRankedScoreFromScoreIdToDenied",
+        "operationId": "SetRankedScoreFromScoreIdToRefused",
         "parameters": [
           {
             "name": "contextId",
@@ -346,7 +346,7 @@
                   "type": "https://tools.ietf.org/html/rfc9110#section-15.5.5",
                   "title": "Not Found",
                   "status": 404,
-                  "instance": "POST contexts/{contextId}/ranked-scores/scores/{scoreId}/set-denied",
+                  "instance": "POST contexts/{contextId}/ranked-scores/scores/{scoreId}/set-refused",
                   "traceId": "00-0123456789abcdef0123456789abcdef-0123456789abcdef-00"
                 }
               }
@@ -364,7 +364,7 @@
                   "title": "Bad Request",
                   "status": 400,
                   "detail": null,
-                  "instance": "POST contexts/{contextId}/ranked-scores/scores/{scoreId}/set-denied",
+                  "instance": "POST contexts/{contextId}/ranked-scores/scores/{scoreId}/set-refused",
                   "traceId": "00-0123456789abcdef0123456789abcdef-0123456789abcdef-00"
                 }
               }
@@ -373,7 +373,7 @@
         },
         "security": [
           {
-            "Bearer": []
+            "Bearer": [ ]
           }
         ]
       }
@@ -457,7 +457,7 @@
         },
         "security": [
           {
-            "Bearer": []
+            "Bearer": [ ]
           }
         ]
       }
@@ -786,7 +786,7 @@
         },
         "security": [
           {
-            "Bearer": []
+            "Bearer": [ ]
           }
         ]
       }
@@ -1115,7 +1115,7 @@
         },
         "security": [
           {
-            "Bearer": []
+            "Bearer": [ ]
           }
         ]
       }
@@ -1275,7 +1275,7 @@
         },
         "security": [
           {
-            "Bearer": []
+            "Bearer": [ ]
           }
         ]
       }
@@ -1511,7 +1511,7 @@
           "Context.RankedMaps"
         ],
         "summary": "Create a ranked map for a context.",
-        "description": "    This endpoint:\n    * Returns 200 OK with ranked map details when created successfully.\n* Returns 401 Unauthorized when the guild has reached its maximum number of ranked maps.\n* Returns 400 Bad Request with validation details when validation fails.\n* Returns 404 Not Found when the map is not found on BeatSaver.\n* Returns 429 Too Many Requests when rate limited by BeatSaver API.\n* Returns 500 Internal Server Error when BeatSaver API fails.",
+        "description": "    This endpoint:\r\n    * Returns 200 OK with ranked map details when created successfully.\r\n* Returns 401 Unauthorized when the guild has reached its maximum number of ranked maps.\r\n* Returns 400 Bad Request with validation details when validation fails.\r\n* Returns 404 Not Found when the map is not found on BeatSaver.\r\n* Returns 429 Too Many Requests when rate limited by BeatSaver API.\r\n* Returns 500 Internal Server Error when BeatSaver API fails.",
         "operationId": "CreateRankedMap",
         "parameters": [
           {
@@ -1623,7 +1623,7 @@
         },
         "security": [
           {
-            "Bearer": []
+            "Bearer": [ ]
           }
         ]
       }
@@ -2090,7 +2090,7 @@
         },
         "security": [
           {
-            "Bearer": []
+            "Bearer": [ ]
           }
         ]
       }
@@ -2186,7 +2186,7 @@
         },
         "security": [
           {
-            "Bearer": []
+            "Bearer": [ ]
           }
         ]
       }
@@ -2357,7 +2357,7 @@
         },
         "security": [
           {
-            "Bearer": []
+            "Bearer": [ ]
           }
         ]
       }
@@ -2401,7 +2401,7 @@
         },
         "security": [
           {
-            "Bearer": []
+            "Bearer": [ ]
           }
         ]
       }
@@ -2494,7 +2494,7 @@
         },
         "security": [
           {
-            "Bearer": []
+            "Bearer": [ ]
           }
         ]
       }
@@ -2970,7 +2970,7 @@
         },
         "security": [
           {
-            "Bearer": []
+            "Bearer": [ ]
           }
         ]
       }
@@ -3144,7 +3144,7 @@
         },
         "security": [
           {
-            "Bearer": []
+            "Bearer": [ ]
           }
         ]
       }
@@ -3305,7 +3305,7 @@
         },
         "security": [
           {
-            "Bearer": []
+            "Bearer": [ ]
           }
         ]
       }
@@ -3416,7 +3416,7 @@
         },
         "security": [
           {
-            "Bearer": []
+            "Bearer": [ ]
           }
         ]
       }
@@ -3496,7 +3496,7 @@
           "Context.Levels"
         ],
         "summary": "Get all levels in a context, optionally filtered by category.",
-        "description": "- No parameters: Returns all levels.\n- hasCategory=false: Only return levels with no category.\n- category=5: Returns levels with category 5.",
+        "description": "- No parameters: Returns all levels.\r\n- hasCategory=false: Only return levels with no category.\r\n- category=5: Returns levels with category 5.",
         "operationId": "GetLevels",
         "parameters": [
           {
@@ -3688,7 +3688,7 @@
         },
         "security": [
           {
-            "Bearer": []
+            "Bearer": [ ]
           }
         ]
       }
@@ -3805,7 +3805,7 @@
         },
         "security": [
           {
-            "Bearer": []
+            "Bearer": [ ]
           }
         ]
       },
@@ -3850,7 +3850,7 @@
         },
         "security": [
           {
-            "Bearer": []
+            "Bearer": [ ]
           }
         ]
       }
@@ -4247,7 +4247,7 @@
         },
         "security": [
           {
-            "Bearer": []
+            "Bearer": [ ]
           }
         ]
       }
@@ -4337,7 +4337,7 @@
         },
         "security": [
           {
-            "Bearer": []
+            "Bearer": [ ]
           }
         ]
       },
@@ -4390,7 +4390,7 @@
         },
         "security": [
           {
-            "Bearer": []
+            "Bearer": [ ]
           }
         ]
       }
@@ -4445,7 +4445,7 @@
         },
         "security": [
           {
-            "Bearer": []
+            "Bearer": [ ]
           }
         ]
       }
@@ -4484,7 +4484,7 @@
         },
         "security": [
           {
-            "Bearer": []
+            "Bearer": [ ]
           }
         ]
       }
@@ -4533,7 +4533,7 @@
         },
         "security": [
           {
-            "Bearer": []
+            "Bearer": [ ]
           }
         ]
       }
@@ -4552,7 +4552,7 @@
         },
         "security": [
           {
-            "Bearer": []
+            "Bearer": [ ]
           }
         ]
       }
@@ -4571,7 +4571,7 @@
         },
         "security": [
           {
-            "Bearer": []
+            "Bearer": [ ]
           }
         ]
       }
@@ -4590,7 +4590,7 @@
         },
         "security": [
           {
-            "Bearer": []
+            "Bearer": [ ]
           }
         ]
       }
@@ -4619,7 +4619,7 @@
         },
         "security": [
           {
-            "Bearer": []
+            "Bearer": [ ]
           }
         ]
       }
@@ -4648,7 +4648,7 @@
         },
         "security": [
           {
-            "Bearer": []
+            "Bearer": [ ]
           }
         ]
       }
@@ -4677,7 +4677,7 @@
         },
         "security": [
           {
-            "Bearer": []
+            "Bearer": [ ]
           }
         ]
       }
@@ -4696,7 +4696,7 @@
         },
         "security": [
           {
-            "Bearer": []
+            "Bearer": [ ]
           }
         ]
       }
@@ -4724,7 +4724,7 @@
         },
         "security": [
           {
-            "Bearer": []
+            "Bearer": [ ]
           }
         ]
       }
@@ -4743,7 +4743,7 @@
         },
         "security": [
           {
-            "Bearer": []
+            "Bearer": [ ]
           }
         ]
       }
@@ -4772,7 +4772,7 @@
         },
         "security": [
           {
-            "Bearer": []
+            "Bearer": [ ]
           }
         ]
       }
@@ -4801,7 +4801,7 @@
         },
         "security": [
           {
-            "Bearer": []
+            "Bearer": [ ]
           }
         ]
       }
@@ -5417,7 +5417,7 @@
         },
         "security": [
           {
-            "Bearer": []
+            "Bearer": [ ]
           }
         ]
       }
@@ -5453,7 +5453,7 @@
         },
         "security": [
           {
-            "Bearer": []
+            "Bearer": [ ]
           }
         ]
       }
@@ -5482,7 +5482,7 @@
         },
         "security": [
           {
-            "Bearer": []
+            "Bearer": [ ]
           }
         ]
       }
@@ -5511,7 +5511,7 @@
         },
         "security": [
           {
-            "Bearer": []
+            "Bearer": [ ]
           }
         ]
       }
@@ -5694,7 +5694,7 @@
           }
         }
       },
-      "BeatLeaderScoreId": {},
+      "BeatLeaderScoreId": { },
       "BeatSaverKey": {
         "type": "string",
         "example": "a3c3"
@@ -5785,7 +5785,7 @@
             "$ref": "#/components/schemas/RankedMapRequirements"
           },
           "manualRating": {
-            "description": "Used to force a specific difficulty and/or accuracy star rating for the map.\nIf null, the star ratings will be calculated automatically by BeatLeader's ExMachina.",
+            "description": "Used to force a specific difficulty and/or accuracy star rating for the map.\r\nIf null, the star ratings will be calculated automatically by BeatLeader's ExMachina.",
             "$ref": "#/components/schemas/ManualRating"
           },
           "categoryIds": {
@@ -5813,6 +5813,10 @@
             "description": "The levels to assign the ranked map to (in case of RankedMapList levels)."
           }
         }
+      },
+      "DiscordChannelId": {
+        "type": "string",
+        "example": "987654321098765432"
       },
       "DiscordGuildId": {
         "type": "string",
@@ -6068,7 +6072,9 @@
       "GuildDiscordInfo": {
         "required": [
           "mainDiscordGuildId",
-          "inviteCode"
+          "inviteCode",
+          "confirmedScoreFeedChannelId",
+          "refusedScoreFeedChannelId"
         ],
         "type": "object",
         "properties": {
@@ -6086,6 +6092,26 @@
             "type": [
               "null",
               "string"
+            ]
+          },
+          "confirmedScoreFeedChannelId": {
+            "oneOf": [
+              {
+                "type": "null"
+              },
+              {
+                "$ref": "#/components/schemas/DiscordChannelId"
+              }
+            ]
+          },
+          "refusedScoreFeedChannelId": {
+            "oneOf": [
+              {
+                "type": "null"
+              },
+              {
+                "$ref": "#/components/schemas/DiscordChannelId"
+              }
             ]
           }
         }
@@ -6424,7 +6450,7 @@
                 "path": {
                   "type": "string"
                 },
-                "value": {}
+                "value": { }
               },
               "additionalProperties": false
             },
@@ -7770,12 +7796,7 @@
         "type": "object",
         "properties": {
           "id": {
-            "pattern": "^-?(?:0|[1-9]\\d*)$",
-            "type": [
-              "integer",
-              "string"
-            ],
-            "format": "int64"
+            "$ref": "#/components/schemas/RankedMapId"
           },
           "guildId": {
             "$ref": "#/components/schemas/GuildId"
@@ -7826,6 +7847,10 @@
             }
           }
         }
+      },
+      "RankedMapId": {
+        "type": "string",
+        "example": "123456789"
       },
       "RankedMapInfo": {
         "required": [
@@ -8009,12 +8034,7 @@
             "format": "int32"
           },
           "rankedMapId": {
-            "pattern": "^-?(?:0|[1-9]\\d*)$",
-            "type": [
-              "integer",
-              "string"
-            ],
-            "format": "int64"
+            "$ref": "#/components/schemas/RankedMapId"
           },
           "editedAt": {
             "type": "string",
@@ -8088,12 +8108,7 @@
             "format": "int32"
           },
           "rankedMapId": {
-            "pattern": "^-?(?:0|[1-9]\\d*)$",
-            "type": [
-              "integer",
-              "string"
-            ],
-            "format": "int64"
+            "$ref": "#/components/schemas/RankedMapId"
           },
           "editedAt": {
             "type": "string",
@@ -8168,12 +8183,7 @@
             "format": "int32"
           },
           "rankedMapId": {
-            "pattern": "^-?(?:0|[1-9]\\d*)$",
-            "type": [
-              "integer",
-              "string"
-            ],
-            "format": "int64"
+            "$ref": "#/components/schemas/RankedMapId"
           },
           "editedAt": {
             "type": "string",
@@ -8248,12 +8258,7 @@
             "format": "int32"
           },
           "rankedMapId": {
-            "pattern": "^-?(?:0|[1-9]\\d*)$",
-            "type": [
-              "integer",
-              "string"
-            ],
-            "format": "int64"
+            "$ref": "#/components/schemas/RankedMapId"
           },
           "editedAt": {
             "type": "string",
@@ -8337,12 +8342,7 @@
             "format": "int32"
           },
           "rankedMapId": {
-            "pattern": "^-?(?:0|[1-9]\\d*)$",
-            "type": [
-              "integer",
-              "string"
-            ],
-            "format": "int64"
+            "$ref": "#/components/schemas/RankedMapId"
           },
           "editedAt": {
             "type": "string",
@@ -8447,6 +8447,8 @@
       },
       "ScoreBeatLeaderScore": {
         "required": [
+          "pauseCount",
+          "totalPauseDuration",
           "hasStatistics",
           "beatLeaderScoreId",
           "id",
@@ -8466,6 +8468,24 @@
               "BeatLeader"
             ],
             "type": "string"
+          },
+          "pauseCount": {
+            "pattern": "^-?(?:0|[1-9]\\d*)$",
+            "type": [
+              "null",
+              "integer",
+              "string"
+            ],
+            "format": "int32"
+          },
+          "totalPauseDuration": {
+            "pattern": "^-?(?:0|[1-9]\\d*)(?:\\.\\d+)?(?:[eE][+-]?\\d+)?$",
+            "type": [
+              "null",
+              "number",
+              "string"
+            ],
+            "format": "float"
           },
           "hasStatistics": {
             "type": "boolean"
@@ -8567,7 +8587,7 @@
         "format": "int64",
         "example": "12345678901234567"
       },
-      "ScoreSaberScoreId": {},
+      "ScoreSaberScoreId": { },
       "ScoreScoreSaberScore": {
         "required": [
           "scoreSaberScoreId",
